--- a/business/package.json
+++ b/business/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "business",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-router": "^1.116.0",
     "@tanstack/react-router-devtools": "^1.116.0",
     "class-variance-authority": "^0.7.1",
@@ -20,7 +20,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.3",
+    "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
