--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
     "@types/uuid": "^10.0.0",
