--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --inspect ./dist/index.js",
-    "debug": "concurrently \"npx tsc --watch\" \"nodemon --inspect ./dist/index.js\"",
+    "start": "node ./dist/index.js",
+    "debug": "tsx watch ./dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,7 +14,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "pg": "^8.14.1",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
@@ -24,10 +29,16 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/pg": "^8.11.13",
     "@types/uuid": "^10.0.0",
-    "concurrently": "^9.1.2",
+    "drizzle-kit": "^0.31.0",
     "nodemon": "^3.1.9",
+    "resend": "^4.3.0",
+    "tsx": "^4.19.3",
     "vitest": "^3.1.1"
   }
 }
