--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bullmq": "^5.52.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
@@ -33,13 +36,13 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.17",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/pg": "^8.11.13",
     "@types/uuid": "^10.0.0",
-    "drizzle-kit": "^0.31.0",
+    "drizzle-kit": "^0.18.1",
     "nodemon": "^3.1.9",
     "tsx": "^4.19.3",
     "vitest": "^3.1.1"
