--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
+    "qrcode": "^1.5.4",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
@@ -51,4 +52,3 @@
     "vitest": "^3.1.1"
   }
 }
- 
